--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -23,13 +23,16 @@ workflows:
         scripts:
             - name: Set Android SDK location
               script: | 
-                  echo "sdk.dir=$ANDROID_SDK_ROOT" > "$CM_BUILD_DIR/local.properties"
+                echo "sdk.dir=$ANDROID_SDK_ROOT" > "$CM_BUILD_DIR/android/local.properties"
             - name: Install npm dependencies
               script: | 
                 npm install
             - name: Run Expo Prebuild
               script: | 
                 npx expo prebuild
+            - name: Set up app/build.gradle
+              script: | 
+                mv ./support-files/build.gradle android/app
             - name: Build Android release
               script: | 
                   cd android
